// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given a Home Page component When it's instantiated Then it should match the html from Home page 1`] = `
<main
  className="sc-bczRLJ kbzsDj"
>
  <h2
    className="action-call"
  >
    Join the 
    <span
      className="action-call__outstanding"
    >
      SnkrsRvws
    </span>
     
    community
  </h2>
  <form
    className="form"
    noValidate={true}
    onSubmit={[Function]}
  >
    <div
      className="mb-3"
    >
      <label
        className="form-label"
        htmlFor="Name"
      >
        User Name
      </label>
      <input
        className="form-control"
        id="Name"
        name="userName"
        onChange={[Function]}
        placeholder="Enter your name"
        required={true}
        type="text"
        value=""
      />
      <div
        className="invalid-feedback"
      >
        Please choose a username.
      </div>
    </div>
    <div
      className="mb-3"
    >
      <label
        className="form-label"
        htmlFor="Email"
      >
        Email
      </label>
      <input
        className="form-control"
        id="Email"
        name="email"
        onChange={[Function]}
        placeholder="Enter your email"
        required={true}
        type="email"
        value=""
      />
      <div
        className="invalid-feedback"
      >
        Please provide a valid email.
      </div>
    </div>
    <div
      className="mb-3"
    >
      <label
        className="form-label"
        htmlFor="Pasword"
      >
        Password
      </label>
      <input
        className="form-control"
        id="Pasword"
        name="password"
        onChange={[Function]}
        placeholder="Password"
        required={true}
        type="password"
        value=""
      />
      <div
        className="invalid-feedback"
      >
        Please provide a password.
      </div>
    </div>
    <div
      className="mb-3"
    >
      <label
        className="form-label"
        htmlFor="PasswordR"
      >
        Repeat password
      </label>
      <input
        className="form-control"
        id="PasswordR"
        name="passwordRepeat"
        onChange={[Function]}
        placeholder="Repeat your password"
        required={true}
        type="password"
        value=""
      />
      <div
        className="invalid-feedback"
      >
        Different passswords
      </div>
    </div>
    <button
      className="col mt-4 btn btn-primary form__button btn btn-primary"
      disabled={false}
      type="submit"
    >
      Sign up
    </button>
  </form>
</main>
`;

exports[`Given a review form Page component When it's instantiated Then it should match the html from Home page 1`] = `
<main
  className="sc-bczRLJ kbzsDj"
>
  <form
    className="form"
    noValidate={true}
    onSubmit={[Function]}
  >
    <div
      className="mb-3"
    >
      <label
        className="form-label"
        htmlFor="Name"
      >
        Brand
      </label>
      <input
        className="form-control"
        id="Name"
        name="brand"
        onChange={[Function]}
        placeholder="Nike, Adidas, Jordan..."
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="mb-3"
    >
      <label
        className="form-label"
        htmlFor="Pasword"
      >
        Model
      </label>
      <input
        className="form-control"
        id="Pasword"
        name="model"
        onChange={[Function]}
        placeholder="Jordan 11, jordan 1 low travis scoot, etc"
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="mb-3"
    >
      <label
        className="form-label"
        htmlFor="Picture"
      >
        Kick's picture
      </label>
      <input
        className="form-control"
        id="Picture"
        name="picture"
        onChange={[Function]}
        type="file"
      />
    </div>
    <div
      className="mb-3"
    >
      <label
        className="form-label"
        htmlFor="exampleForm.ControlTextarea1"
      >
        Your review
      </label>
      <textarea
        className="form-control"
        id="exampleForm.ControlTextarea1"
        name="review"
        onChange={[Function]}
        required={true}
        rows={3}
        value=""
      />
    </div>
    <button
      className="col mt-4 btn btn-primary form__button btn btn-primary"
      disabled={false}
      type="submit"
    >
      Craete Review
    </button>
  </form>
</main>
`;
